--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>React App</title>
   <link rel="shortcut icon" href="./favicon.ico">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
